# MPI

./: CMakeLists.txt  README.md
src/: main.cc  send  send_msg.cc
